[package]
name = "stm32f0x0"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["arm", "cortex-m", "stm32", "svd2rust"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Teo Klestrup Röijezon <teo@nullable.se>"]
repository = "https://github.com/PicoNodes/stm32f0x0"
description = "Peripheral access API for STM32F0X0 microcontrollers"

[dependencies]
bare-metal = "0.1"
vcell = "0.1"
cortex-m = "0.4"

[dependencies.cortex-m-rt]
optional = true
version = "0.4.0"
# version = "0.3.15"

[features]
rt = ["cortex-m-rt"]
